--- a/css/layout.css
+++ b/css/layout.css
@@ -3,27 +3,11 @@ body {height: 100%;width: 100%;
 }
 html {height: 100%;width: 100%;
 }
-img{padding: 5px;
-}
-
-// CLASSES
-li.nav-item{margin: 5px;
-}
-.cards-div{padding: 10px;
-}
-.card-title{padding-left: 10px;
+.carousel-img{width: 98%;padding: 4px;
 }
 .carousel-caption{top: 30px;
 }
-.carousel-img{width: 95%;padding: 4px;margin-bottom:5px;
+.btn{margin-bottom: 50px;
 }
-.carousel-inner img {height: 100%;margin-top: 10px;
-}
-.carousel.slide{padding: 0;margin: 0;
-}
-.center {display: block;margin-left: auto;margin-right: auto;
-}
-
-
-.nav-link{font-size:1.25rem;
+.nav-link{font-size:1.15rem;
 }
