--- a/css/colours.css
+++ b/css/colours.css
@@ -2,12 +2,12 @@
 
 // CLASSES
 .bg-nav{background-color:#071871!important}
-.carousel-img{background-color: #fff;}
+.carousel-img{background-color: #E5E5E5;}
 .destak{color:#191970;}
 .navbar{background-color: #071871;}
 
 // IDs
-  #section1{background: #DCDCDC;}
+  #section1{background: #F0FFFF;}
   #section2{background: #F0FFFF;}
   #section3{background: #DCDCDC;}
   #section4{background: #FFF;}
