--- a/css/layout.css
+++ b/css/layout.css
@@ -4,7 +4,7 @@ html {height: 100%;width: 100%;}
 
 //IDs e CLASSES
 .desfault-section{width: 100%;}
-.carousel-img{width:100%;padding: 2px;}
+.carousel-img{width:100%;}
 .btn{margin-bottom: 50px;}
 footer.copyright{height:35px;padding:5px;}
 p.copyright{float: right;font-size:0.85rem;text-align: right;}
@@ -14,6 +14,7 @@ p.copyright{float: right;font-size:0.85rem;text-align: right;}
   .navbar-toggler{height: 60px;padding-top: 12px;}
   .logo{height: 66px;padding: 2px;}
   .carousel-caption{display: none;}
+  .carousel-img{padding: 4px;}
   form{padding-bottom: 30px;}
 }
 @media only screen and (min-width: 668px) {
@@ -22,4 +23,5 @@ p.copyright{float: right;font-size:0.85rem;text-align: right;}
   .nav-link{font-size:1.25rem;}
   .logo{height: 90px;padding: 5px;}
   .carousel-caption{top: 15px;}
+  .carousel-img{padding: 6px;}
 }
